--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,10 +3,29 @@
     margin: 0;
     box-sizing: border-box;
   }
+
+@font-face {
+  font-family: 'gilroyextrabold';
+  src: url('../fonts/gilroy-extrabold-webfont.woff2') format('woff2'),
+       url('../fonts/gilroy-extrabold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'gilroylight';
+  src: url('../fonts/gilroy-light-webfont.woff2') format('woff2'),
+       url('../fonts/gilroy-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
   
   body, html {
     width: 100%;
     height: 100%;
+    font-family: "gilroyextrabold", "gilroylight", Inter, sans-serif;
   }
   
   .root {
